# static-shared-pic-needed

./: CMakeLists.txt  README.md  boo.cpp  boo.hpp  foo.cpp  foo.hpp
